tests/paczka1/fuzzy1/38400231.err
Error in line 8: xyP S0 73,9
Error in line 3: fJt S420 38,1
Error in line 11: cefwZdD0 S0 62,8
Error in line 20: xyP S0 290,4
Error in line 22: xyP A455 02,2
Error in line 31: S50 S0 66,9
Error in line 34: S50 S0 55,5
Error in line 37: ?S0
Error in line 39: cefwZdD0 S0 88,6
